# eFISHent

./: .gitignore  CHANGELOG.md  CITATION.cff  HOSTING_PLAN.md  MANIFEST.in  README.md  install.sh  install_linux.sh  install_macos.sh  license.txt  meta.yaml  mockup.html  mockup_map_a.html  mockup_map_b.html  mockup_map_c.html  pyproject.toml  setup.cfg  setup.py  tox.ini
conda/: environment.yaml  meta.yaml
eFISHent/: Fold_linux  Fold_osx  __init__.py  alignment.py  analyze.py  basic_filtering.py  cleanup.py  cli.py  config.py  console.py  constants.py  gene_annotation.py  generate_probes.py  indexing.py  kmers.py  luigi.cfg  optimization.py  prebuilt.py  prepare_sequence.py  presets.py  rdna_filter.py  secondary_structure.py  transcriptome_filter.py  util.py
efishent/: __init__.py  __main__.py  alignment.py  kmers.py  luigi.cfg  optimization.py  secondary_structure.py
scripts/: build_celegans_refs.sh  build_drosophila_refs.sh  build_rat_refs.sh  build_yeast_refs.sh  build_zebrafish_refs.sh  prepare_celegans_hf_upload.sh  prepare_drosophila_hf_upload.sh  prepare_hf_upload.sh  prepare_rat_hf_upload.sh  prepare_yeast_hf_upload.sh  prepare_zebrafish_hf_upload.sh
src/: __main__.py  alignment.py  basic_filtering.py  cleanup.py  cli.py  config.py  constants.py  generate_probes.py  kmers.py  luigi.cfg  optimization.py  prepare_sequence.py  secondary_structure.py  util.py
tests/: aad4_basic.fasta  aad4_basic.sam  conftest.py  count_table1.tsv  count_table2.csv  renilla_basic.sam  renilla_data_table.fasta  test_adaptive_probes.py  test_alignment.py  test_cleanup.py  test_coverage_boost.py  test_gene_annotation.py  test_indexing.py  test_integration.py  test_kmers.py  test_optimization.py  test_prepare_sequence.py  test_quality_scores.py  test_unit_alignment.py  test_unit_analyze.py  test_unit_basic_filtering.py  test_unit_cleanup.py  test_unit_cli.py  test_unit_console.py  test_unit_generate_probes.py  test_unit_indexing.py  test_unit_kmers.py  test_unit_optimization.py  test_util.py  (+7 more)
(+32 files in other folders)
